// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overview should render correctly with contact data but without a name 1`] = `
.c9 {
  height: 16px;
  width: 16px;
}

.c9 path {
  fill: currentColor;
}

.c6 {
  width: auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: var(--button-gap);
  margin: var(--button-margin);
  cursor: pointer;
  text-wrap: var(--button-text-wrap);
  color: var(--button-color);
  background-color: var(--button-bg-color);
  border: var(--button-border-width) var(--button-border-style) var(--button-border-color);
  box-shadow: var(--button-box-shadow);
  -webkit-backdrop-filter: var(--button-backdrop-filter,none);
  backdrop-filter: var(--button-backdrop-filter,none);
  font-weight: var(--button-font-weight);
  font-size: var(--button-font-size);
  line-height: var(--button-line-height);
  padding: var(--button-icon-padding);
  border-radius: var(--button-border-radius);
}

.c6 svg {
  width: var(--button-icon-size);
  height: var(--button-icon-size);
}

.c6:hover {
  background-color: var(--button-bg-color-hover);
  color: var(--button-color-hover);
  border-color: var(--button-border-color-hover);
}

.c6:active,
.c6.active {
  background-color: var(--button-bg-color-active);
  border-color: var(--button-border-color-active);
  color: var(--button-color-active);
}

.c6:focus-visible {
  outline: 1px solid var(--button-border-color-focused);
}

.c6.button-tone-danger {
  color: var(--button-content-color-danger);
  border-color: var(--button-border-color-danger);
  background-color: var(--button-bg-color-danger);
}

.c6.button-tone-danger:hover {
  color: var(--button-content-color-danger-hover);
  border-color: var(--button-border-color-danger-hover);
  background-color: var(--button-bg-color-danger-hover);
}

.c6.button-tone-danger:active {
  color: var(--button-content-color-danger-pressed);
  border-color: var(--button-border-color-danger-pressed);
  background-color: var(--button-bg-color-danger-pressed);
}

.c6:disabled {
  pointer-events: none;
  background-color: var(--button-bg-color-disabled);
  color: var(--button-content-color-disabled);
  border-color: var(--button-border-color-disabled);
  border-width: var(--button-border-width-disabled);
}

.c8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  height: 16px;
  width: 16px;
}

.c7 path {
  fill: currentColor;
}

.c10 {
  height: 16px;
  width: 16px;
}

.c10 path {
  fill: currentColor;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  position: relative;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  margin: 0;
  color: var(--text-color-secondary);
  font-size: var(--font-size-base);
  line-height: var(--line-height-base);
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-xs);
}

.c0 > span {
  border-bottom: 1px solid var(--border-color-secondary);
  margin-bottom: var(--spacing-xs);
  padding-bottom: var(--spacing-xs);
}

.c0 > span:last-child {
  border-bottom: none;
  margin-bottom: 0;
  padding-bottom: 0;
}

.c3 {
  color: var(--text-color-secondary);
  font-size: var(--font-size-base);
  line-height: var(--line-height-base);
  font-weight: var(--font-weight-medium);
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      <span
        class="c2"
      >
        <span
          class="c3"
        >
          URL
        </span>
        <div
          class="c4"
        >
           
          <a
            href="https://example.com"
            rel="noreferrer"
            target="_blank"
          >
            https://example.com
          </a>
        </div>
      </span>
      <div
        class="c5"
      >
        <div
          data-component-name="Buttons/NewTabButton"
        >
          <button
            aria-label="Open in new tab"
            class="c6 button button-tone-default button-variant-text button-size-small"
            data-component-name="Button/Button"
            data-testid="new-tab-button"
          >
            <svg
              class="c7"
              data-component-name="icons/ArrowUpRightIcon/ArrowUpRightIcon"
              fill="none"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 3V4H11.295L3 12.295L3.705 13L12 4.705V11H13V3H5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </span>
    <span
      class="c1"
    >
      <span
        class="c2"
      >
        <span
          class="c3"
        >
          E-mail
        </span>
        <div
          class="c4"
        >
           
          <a
            href="mailto:test@example.com"
          >
            test@example.com
          </a>
        </div>
      </span>
      <div
        class="c5"
      >
        <div
          class="c8 tooltip-copy-button "
          data-component-name="Tooltip/Tooltip"
        >
          <button
            class="c6 button button-tone-default button-variant-text button-size-small"
            data-component-name="Buttons/CopyButton"
            data-testid="copy-button"
          >
            <svg
              class="c9"
              data-component-name="icons/CopyIcon/CopyIcon"
              fill="none"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.16667 2.66667C5.16667 2.57462 5.24129 2.5 5.33333 2.5H12C12.092 2.5 12.1667 2.57462 12.1667 2.66667V10.6667C12.1667 10.7587 12.092 10.8333 12 10.8333H10H5.33333C5.24129 10.8333 5.16667 10.7587 5.16667 10.6667V4.66667V2.66667ZM4.16667 4.16667V2.66667C4.16667 2.02233 4.689 1.5 5.33333 1.5H12C12.6443 1.5 13.1667 2.02233 13.1667 2.66667V10.6667C13.1667 11.311 12.6443 11.8333 12 11.8333H10.5V13.3333C10.5 13.6428 10.3771 13.9395 10.1583 14.1583C9.9395 14.3771 9.64275 14.5 9.33333 14.5H2.66667C2.35725 14.5 2.0605 14.3771 1.84171 14.1583C1.62292 13.9395 1.5 13.6428 1.5 13.3333V5.33333C1.5 5.02391 1.62292 4.72717 1.84171 4.50838C2.0605 4.28958 2.35725 4.16667 2.66667 4.16667H4.16667ZM9.5 11.8333V13.3333C9.5 13.3775 9.48244 13.4199 9.45118 13.4512C9.41993 13.4824 9.37754 13.5 9.33333 13.5H2.66667C2.62246 13.5 2.58007 13.4824 2.54882 13.4512C2.51756 13.4199 2.5 13.3775 2.5 13.3333V5.33333C2.5 5.28913 2.51756 5.24674 2.54882 5.21548C2.58007 5.18423 2.62246 5.16667 2.66667 5.16667H4.16667V10.6667C4.16667 11.311 4.689 11.8333 5.33333 11.8333H9.5Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          data-component-name="Buttons/EmailButton"
        >
          <button
            aria-label="Email"
            class="c6 button button-tone-default button-variant-text button-size-small"
            data-component-name="Button/Button"
            data-testid="email-button"
          >
            <svg
              class="c10"
              data-component-name="icons/EmailIcon/EmailIcon"
              fill="none"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 3H2C1.73478 3 1.48043 3.10536 1.29289 3.29289C1.10536 3.48043 1 3.73478 1 4V12C1 12.2652 1.10536 12.5196 1.29289 12.7071C1.48043 12.8946 1.73478 13 2 13H14C14.2652 13 14.5196 12.8946 14.7071 12.7071C14.8946 12.5196 15 12.2652 15 12V4C15 3.73478 14.8946 3.48043 14.7071 3.29289C14.5196 3.10536 14.2652 3 14 3ZM12.9 4L8 7.39L3.1 4H12.9ZM2 12V4.455L7.715 8.41C7.7987 8.46806 7.89813 8.49918 8 8.49918C8.10187 8.49918 8.2013 8.46806 8.285 8.41L14 4.455V12H2Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Overview should render correctly with full data 1`] = `
.c9 {
  height: 16px;
  width: 16px;
}

.c9 path {
  fill: currentColor;
}

.c6 {
  width: auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: var(--button-gap);
  margin: var(--button-margin);
  cursor: pointer;
  text-wrap: var(--button-text-wrap);
  color: var(--button-color);
  background-color: var(--button-bg-color);
  border: var(--button-border-width) var(--button-border-style) var(--button-border-color);
  box-shadow: var(--button-box-shadow);
  -webkit-backdrop-filter: var(--button-backdrop-filter,none);
  backdrop-filter: var(--button-backdrop-filter,none);
  font-weight: var(--button-font-weight);
  font-size: var(--button-font-size);
  line-height: var(--button-line-height);
  padding: var(--button-icon-padding);
  border-radius: var(--button-border-radius);
}

.c6 svg {
  width: var(--button-icon-size);
  height: var(--button-icon-size);
}

.c6:hover {
  background-color: var(--button-bg-color-hover);
  color: var(--button-color-hover);
  border-color: var(--button-border-color-hover);
}

.c6:active,
.c6.active {
  background-color: var(--button-bg-color-active);
  border-color: var(--button-border-color-active);
  color: var(--button-color-active);
}

.c6:focus-visible {
  outline: 1px solid var(--button-border-color-focused);
}

.c6.button-tone-danger {
  color: var(--button-content-color-danger);
  border-color: var(--button-border-color-danger);
  background-color: var(--button-bg-color-danger);
}

.c6.button-tone-danger:hover {
  color: var(--button-content-color-danger-hover);
  border-color: var(--button-border-color-danger-hover);
  background-color: var(--button-bg-color-danger-hover);
}

.c6.button-tone-danger:active {
  color: var(--button-content-color-danger-pressed);
  border-color: var(--button-border-color-danger-pressed);
  background-color: var(--button-bg-color-danger-pressed);
}

.c6:disabled {
  pointer-events: none;
  background-color: var(--button-bg-color-disabled);
  color: var(--button-content-color-disabled);
  border-color: var(--button-border-color-disabled);
  border-width: var(--button-border-width-disabled);
}

.c8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  height: 16px;
  width: 16px;
}

.c7 path {
  fill: currentColor;
}

.c10 {
  height: 16px;
  width: 16px;
}

.c10 path {
  fill: currentColor;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  position: relative;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  margin: 0;
  color: var(--text-color-secondary);
  font-size: var(--font-size-base);
  line-height: var(--line-height-base);
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-xs);
}

.c0 > span {
  border-bottom: 1px solid var(--border-color-secondary);
  margin-bottom: var(--spacing-xs);
  padding-bottom: var(--spacing-xs);
}

.c0 > span:last-child {
  border-bottom: none;
  margin-bottom: 0;
  padding-bottom: 0;
}

.c3 {
  color: var(--text-color-secondary);
  font-size: var(--font-size-base);
  line-height: var(--line-height-base);
  font-weight: var(--font-weight-medium);
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      <span
        class="c2"
      >
        <span
          class="c3"
        >
          URL
        </span>
        <div
          class="c4"
        >
           
          <a
            href="https://example.com"
            rel="noreferrer"
            target="_blank"
          >
            https://example.com
          </a>
        </div>
      </span>
      <div
        class="c5"
      >
        <div
          data-component-name="Buttons/NewTabButton"
        >
          <button
            aria-label="Open in new tab"
            class="c6 button button-tone-default button-variant-text button-size-small"
            data-component-name="Button/Button"
            data-testid="new-tab-button"
          >
            <svg
              class="c7"
              data-component-name="icons/ArrowUpRightIcon/ArrowUpRightIcon"
              fill="none"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 3V4H11.295L3 12.295L3.705 13L12 4.705V11H13V3H5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </span>
    <span
      class="c1"
    >
      <span
        class="c2"
      >
        <span
          class="c3"
        >
          Test Contact
        </span>
        <div
          class="c4"
        >
           
          <a
            href="mailto:test@example.com"
          >
            test@example.com
          </a>
        </div>
      </span>
      <div
        class="c5"
      >
        <div
          class="c8 tooltip-copy-button "
          data-component-name="Tooltip/Tooltip"
        >
          <button
            class="c6 button button-tone-default button-variant-text button-size-small"
            data-component-name="Buttons/CopyButton"
            data-testid="copy-button"
          >
            <svg
              class="c9"
              data-component-name="icons/CopyIcon/CopyIcon"
              fill="none"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.16667 2.66667C5.16667 2.57462 5.24129 2.5 5.33333 2.5H12C12.092 2.5 12.1667 2.57462 12.1667 2.66667V10.6667C12.1667 10.7587 12.092 10.8333 12 10.8333H10H5.33333C5.24129 10.8333 5.16667 10.7587 5.16667 10.6667V4.66667V2.66667ZM4.16667 4.16667V2.66667C4.16667 2.02233 4.689 1.5 5.33333 1.5H12C12.6443 1.5 13.1667 2.02233 13.1667 2.66667V10.6667C13.1667 11.311 12.6443 11.8333 12 11.8333H10.5V13.3333C10.5 13.6428 10.3771 13.9395 10.1583 14.1583C9.9395 14.3771 9.64275 14.5 9.33333 14.5H2.66667C2.35725 14.5 2.0605 14.3771 1.84171 14.1583C1.62292 13.9395 1.5 13.6428 1.5 13.3333V5.33333C1.5 5.02391 1.62292 4.72717 1.84171 4.50838C2.0605 4.28958 2.35725 4.16667 2.66667 4.16667H4.16667ZM9.5 11.8333V13.3333C9.5 13.3775 9.48244 13.4199 9.45118 13.4512C9.41993 13.4824 9.37754 13.5 9.33333 13.5H2.66667C2.62246 13.5 2.58007 13.4824 2.54882 13.4512C2.51756 13.4199 2.5 13.3775 2.5 13.3333V5.33333C2.5 5.28913 2.51756 5.24674 2.54882 5.21548C2.58007 5.18423 2.62246 5.16667 2.66667 5.16667H4.16667V10.6667C4.16667 11.311 4.689 11.8333 5.33333 11.8333H9.5Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          data-component-name="Buttons/EmailButton"
        >
          <button
            aria-label="Email"
            class="c6 button button-tone-default button-variant-text button-size-small"
            data-component-name="Button/Button"
            data-testid="email-button"
          >
            <svg
              class="c10"
              data-component-name="icons/EmailIcon/EmailIcon"
              fill="none"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 3H2C1.73478 3 1.48043 3.10536 1.29289 3.29289C1.10536 3.48043 1 3.73478 1 4V12C1 12.2652 1.10536 12.5196 1.29289 12.7071C1.48043 12.8946 1.73478 13 2 13H14C14.2652 13 14.5196 12.8946 14.7071 12.7071C14.8946 12.5196 15 12.2652 15 12V4C15 3.73478 14.8946 3.48043 14.7071 3.29289C14.5196 3.10536 14.2652 3 14 3ZM12.9 4L8 7.39L3.1 4H12.9ZM2 12V4.455L7.715 8.41C7.7987 8.46806 7.89813 8.49918 8 8.49918C8.10187 8.49918 8.2013 8.46806 8.285 8.41L14 4.455V12H2Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </span>
    <span
      class="c1"
    >
      <span
        class="c2"
      >
        <span
          class="c3"
        >
          License
        </span>
        <div
          class="c4"
        >
           
          MIT
        </div>
      </span>
      <div
        class="c5"
      >
        <div
          data-component-name="Buttons/NewTabButton"
        >
          <button
            aria-label="Open in new tab"
            class="c6 button button-tone-default button-variant-text button-size-small"
            data-component-name="Button/Button"
            data-testid="new-tab-button"
          >
            <svg
              class="c7"
              data-component-name="icons/ArrowUpRightIcon/ArrowUpRightIcon"
              fill="none"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 3V4H11.295L3 12.295L3.705 13L12 4.705V11H13V3H5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </span>
    <span
      class="c1"
    >
      <span
        class="c2"
      >
        <div
          class="c4"
        >
           
          <a
            href="https://example.com/terms"
            rel="noreferrer"
            target="_blank"
          >
            Terms of Service
          </a>
        </div>
      </span>
      <div
        class="c5"
      >
        <div
          data-component-name="Buttons/NewTabButton"
        >
          <button
            aria-label="Open in new tab"
            class="c6 button button-tone-default button-variant-text button-size-small"
            data-component-name="Button/Button"
            data-testid="new-tab-button"
          >
            <svg
              class="c7"
              data-component-name="icons/ArrowUpRightIcon/ArrowUpRightIcon"
              fill="none"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 3V4H11.295L3 12.295L3.705 13L12 4.705V11H13V3H5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Overview should render correctly with partial data 1`] = `
.c0 > span {
  border-bottom: 1px solid var(--border-color-secondary);
  margin-bottom: var(--spacing-xs);
  padding-bottom: var(--spacing-xs);
}

.c0 > span:last-child {
  border-bottom: none;
  margin-bottom: 0;
  padding-bottom: 0;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Overview should render license with name and url when identifier is not present 1`] = `
.c6 {
  width: auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: var(--button-gap);
  margin: var(--button-margin);
  cursor: pointer;
  text-wrap: var(--button-text-wrap);
  color: var(--button-color);
  background-color: var(--button-bg-color);
  border: var(--button-border-width) var(--button-border-style) var(--button-border-color);
  box-shadow: var(--button-box-shadow);
  -webkit-backdrop-filter: var(--button-backdrop-filter,none);
  backdrop-filter: var(--button-backdrop-filter,none);
  font-weight: var(--button-font-weight);
  font-size: var(--button-font-size);
  line-height: var(--button-line-height);
  padding: var(--button-icon-padding);
  border-radius: var(--button-border-radius);
}

.c6 svg {
  width: var(--button-icon-size);
  height: var(--button-icon-size);
}

.c6:hover {
  background-color: var(--button-bg-color-hover);
  color: var(--button-color-hover);
  border-color: var(--button-border-color-hover);
}

.c6:active,
.c6.active {
  background-color: var(--button-bg-color-active);
  border-color: var(--button-border-color-active);
  color: var(--button-color-active);
}

.c6:focus-visible {
  outline: 1px solid var(--button-border-color-focused);
}

.c6.button-tone-danger {
  color: var(--button-content-color-danger);
  border-color: var(--button-border-color-danger);
  background-color: var(--button-bg-color-danger);
}

.c6.button-tone-danger:hover {
  color: var(--button-content-color-danger-hover);
  border-color: var(--button-border-color-danger-hover);
  background-color: var(--button-bg-color-danger-hover);
}

.c6.button-tone-danger:active {
  color: var(--button-content-color-danger-pressed);
  border-color: var(--button-border-color-danger-pressed);
  background-color: var(--button-bg-color-danger-pressed);
}

.c6:disabled {
  pointer-events: none;
  background-color: var(--button-bg-color-disabled);
  color: var(--button-content-color-disabled);
  border-color: var(--button-border-color-disabled);
  border-width: var(--button-border-width-disabled);
}

.c7 {
  height: 16px;
  width: 16px;
}

.c7 path {
  fill: currentColor;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  position: relative;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  margin: 0;
  color: var(--text-color-secondary);
  font-size: var(--font-size-base);
  line-height: var(--line-height-base);
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-xs);
}

.c0 > span {
  border-bottom: 1px solid var(--border-color-secondary);
  margin-bottom: var(--spacing-xs);
  padding-bottom: var(--spacing-xs);
}

.c0 > span:last-child {
  border-bottom: none;
  margin-bottom: 0;
  padding-bottom: 0;
}

.c3 {
  color: var(--text-color-secondary);
  font-size: var(--font-size-base);
  line-height: var(--line-height-base);
  font-weight: var(--font-weight-medium);
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      <span
        class="c2"
      >
        <span
          class="c3"
        >
          License
        </span>
        <div
          class="c4"
        >
           
          <a
            href="https://www.apache.org/licenses/LICENSE-2.0.html"
            rel="noreferrer"
            target="_blank"
          >
            Apache 2.0
          </a>
        </div>
      </span>
      <div
        class="c5"
      >
        <div
          data-component-name="Buttons/NewTabButton"
        >
          <button
            aria-label="Open in new tab"
            class="c6 button button-tone-default button-variant-text button-size-small"
            data-component-name="Button/Button"
            data-testid="new-tab-button"
          >
            <svg
              class="c7"
              data-component-name="icons/ArrowUpRightIcon/ArrowUpRightIcon"
              fill="none"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 3V4H11.295L3 12.295L3.705 13L12 4.705V11H13V3H5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </span>
  </div>
</div>
`;
